# mastodon-telegram-bridge

./: .gitignore  LICENSE  README.md  config.example.json  config.example.toml  main.py  pyproject.toml  requirements.txt  utils.py
examples/: custom_filter.py
mastodon_telegram_bridge/: __init__.py  api.py  bridge.py  cli.py  filter.py  footer.py  main.py  types.py  typing.py  utils.py
